2004-03-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web.erl: Added interface for users listsing and
	statistics

2004-03-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web.erl: New interface for ACLs editing

	* src/web/ejabberd_http_poll.erl: Fixed "Content-Type" header,
	"Set-Cookie" is included only in first response in session, added
	missed behaviour definition

	* src/web/ejabberd_http.erl: "Content-Type" header now can be
	changed

2004-03-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_web.erl: Experiments with web-interface

	* src/configure.ac: Updated
	* src/Makefile.in: Likewise

2004-03-10  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http.erl: Removed debugging output

	* src/ejabberd_c2s.erl: Fixed processing of get_presence request
	(thanks to Mickael Remond)

2004-03-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/ru.msg: Updated (thanks to Sergei Golovan)

	* src/mod_muc/mod_muc_room.erl: Now private conferences are
	visible to admins and owners of this conference (thanks to Sergei
	Golovan)

	* src/mod_muc/mod_muc.erl: More xml:lang support (thanks to Sergei
	Golovan)

	* src/mod_vcard.erl: Better processing of EMAIL tag (thanks to
	Sergei Golovan)

	* src/ejabberd_s2s_out.erl: Added "catch" to "open_socket" (thanks
	to Sergei Golovan)

2004-03-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/ejabberd_http_poll.erl: Completed

2004-03-06  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Support for HTTP Polling (JEP-0025) (almost complete)

2004-03-04  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Updated

2004-03-03  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Minor update

2004-03-02  Alexey Shchepin  <alexey@sevcom.net>

	* src/web/: Small HTTP server and admin web-interface to ejabberd
	(not completed yet)
	* src/ejabberd_sup.erl: Added HTTP processes supervisor

	* src/ejabberd_c2s.erl: Added API to ask presence (thanks to
	Mickael Remond)
